--- a/backend/package.json
+++ b/backend/package.json
@@ -20,7 +20,9 @@
     "openai": "^4.24.1",
     "axios": "^1.6.2",
     "uuid": "^9.0.1",
-    "ws": "^8.14.2"
+    "ws": "^8.14.2",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
@@ -29,6 +31,8 @@
     "@types/node": "^20.10.4",
     "@types/uuid": "^9.0.7",
     "@types/ws": "^8.5.10",
+    "@types/swagger-jsdoc": "^6.0.4",
+    "@types/swagger-ui-express": "^4.1.6",
     "typescript": "^5.3.3",
     "nodemon": "^3.0.2",
     "ts-node": "^10.9.1",
