--- a/backend/package.json
+++ b/backend/package.json
@@ -9,34 +9,39 @@
     "build": "tsc",
     "test": "jest"
   },
-  "keywords": ["llm", "ai", "mcp", "agent"],
+  "keywords": [
+    "llm",
+    "ai",
+    "mcp",
+    "agent"
+  ],
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.18.2",
-    "cors": "^2.8.5",
-    "multer": "^1.4.5-lts.1",
-    "socket.io": "^4.7.4",
-    "openai": "^4.24.1",
     "axios": "^1.6.2",
-    "uuid": "^9.0.1",
-    "ws": "^8.14.2",
+    "cors": "^2.8.5",
+    "express": "^4.18.2",
+    "multer": "^1.4.5-lts.1",
+    "openai": "^4.24.1",
+    "socket.io": "^4.7.4",
     "swagger-jsdoc": "^6.2.8",
-    "swagger-ui-express": "^5.0.0"
+    "swagger-ui-express": "^5.0.0",
+    "uuid": "^9.0.1",
+    "ws": "^8.14.2"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.19",
     "@types/express": "^4.17.21",
-    "@types/cors": "^2.8.17",
+    "@types/jest": "^29.5.8",
     "@types/multer": "^1.4.11",
     "@types/node": "^20.10.4",
-    "@types/uuid": "^9.0.7",
-    "@types/ws": "^8.5.10",
     "@types/swagger-jsdoc": "^6.0.4",
     "@types/swagger-ui-express": "^4.1.6",
-    "typescript": "^5.3.3",
+    "@types/uuid": "^9.0.7",
+    "@types/ws": "^8.5.10",
+    "jest": "^29.7.0",
     "nodemon": "^3.0.2",
     "ts-node": "^10.9.1",
-    "jest": "^29.7.0",
-    "@types/jest": "^29.5.8"
+    "typescript": "^5.3.3"
   }
 }
