--- a/backend/package.json
+++ b/backend/package.json
@@ -24,6 +24,7 @@
     "multer": "^1.4.5-lts.1",
     "openai": "^4.24.1",
     "socket.io": "^4.7.4",
+    "socket.io-client": "^4.8.1",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.0",
     "uuid": "^9.0.1",
